# geo-nlq-to-sql

./: .gitignore  README.md  analytics.ipynb  config.yaml  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
data/: base_dataset.parquet  features.parquet  geo_dataset.csv  spider_dataset.csv  test_data.csv  tf_idf_sparse_matrix.npz  tfidf_matrix.parquet  training_data.csv  validation_data.csv
data/geo_dataset/source=base_dataset/: 0.parquet
data/geo_dataset/source=swapping/: 0.parquet
dataset/: dataset.ods
docs/: index.html
github-pages/: index.html
models/: t5_model.py  text_models.py
notebooks/: data_transformation.ipynb  exploring_geolocations.ipynb  model_tests.ipynb
notebooks/.ipynb_checkpoints/: data_transformation-checkpoint.ipynb
scrips/: load_layers.py
scripts/: run_tfidf_matrix.sh
text_processor/: __init__.py  data_aug.py  tfidf_matrix.py
text_processor/core/: tfidf_vectorizer.py
utils/: __init__.py  database_utils.py  dataset.py  global_variables.py  models_utils.py  utils.py
