[tool.poetry]
name = "ms-usp-text-to-sql"
version = "0.1.0"
description = "Text-to-SQL is a project to translate geolocations queries to SQL code"
authors = ["Diego Lopes <diego.oliveiralopes@ime.usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
torch = "^2.3.0"
transformers = "^4.41.1"
scikit-learn = "^1.5.0"
sentencepiece = "^0.2.0"
jupyter = "^1.0.0"
torchvision = "^0.18.0"
accelerate = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
